static/css/style.css
/* ... */
body#home > header {
	height: auto;
}
#header-background {
	background: 	#2a2a2a;
	background: 	rgba(38,38,38,0.98);
	border-bottom: 	10px solid #a5151e;
	height: 		100%;
	margin: 		0 0 15px 0;
	position: 		absolute;
	right:			0;
	width: 			85%;
	min-width:		1100px;
	z-index: 		-1;
}
#header-content {
	height: 	100%;
	padding: 	20px 0 0 0;
	position: 	relative;
}
	#header-content p {
		clear: 		both;
		max-width: 	460px;
		padding: 	0 0 30px 0;
	}
	#header-content h1 {
		float: 			left;
		margin: 		0;
		min-width:		270px;
		z-index: 		2;
	}
	#home #header-content h1 {
		width:		auto;
	}
		#header-content h1 a,
		#header-content h1 a:link,
		#header-content h1 a:active,
		#header-content h1 a:visited {
			display: 			inline;
			font-weight: 		bold;
			letter-spacing: 	-2px;
			font-size: 			40px;
			color: 				#fff;
			text-decoration: 	none;
			padding: 			0;
			text-shadow: 		0 1px 5px rgba(0,0,0,0.4);
		}
		#header-content h1 a:hover,
		#header-content h1 a:focus {
			text-decoration: 	none;
			color: 				#eee;
			text-shadow: 		0 1px 5px rgba(0,0,0,0.4),
								0 0 10px rgba(255,255,255,0.4);
		}
		#header-content h1 img {
			vertical-align:	middle;
		}
		#header-content h1 span {
			color: 		gray;
			font-size: 	0.8em;
		}
		#header-content > div {
			float: 			left;
			padding-right: 	160px;
		}

#header-nav {
	float: 				left;
	list-style-type: 	none;
	margin: 			0;
}
	#header-nav li {
		background: 	none;
		float: 			left;
		padding: 		0 0 30px 0;
		position: 		relative;
	}
	#header-nav a,
	#header-nav span {
		color: 			#ccc;
		display: 		block;
		padding: 		25px 15px 0 15px;
		font-weight: 	bold;
		font-size: 		1.2em;
		height: 		100%;
	}
	#header-nav a:hover,
	#header-nav a:focus {
		text-decoration: 	none;
		color: 				#f59d56;
	}
	#header-nav li.selected a,
	#header-nav li.on a {
		color: white;
	}
	#header-nav li.selected:after,
	#header-nav li.on:after {
		content: 				"";
		height: 				0;
		position: 				absolute;
		width: 					0;

		border: 				10px solid transparent;
		border-bottom-color: 	#a5151e;

		bottom: 				0;
		left: 					50%;
		margin-left: 			-5px;
	}

#header-options {
	padding: 	20px 0 0 0;
	position: 	absolute;
	right:		0px;
}
	#header-options .button {
		background-color: 			#deb154;

		background-image: 	-webkit-gradient(linear, left top, left bottom, from(#e5cf55), to(#c3752d));
		background-image: 	-webkit-linear-gradient(top, #e5cf55, #deb154 50%,#d5a42e 50%, #c3752d);
		background-image: 	   -moz-linear-gradient(top, #e5cf55, #deb154 50%,#d5a42e 50%, #c3752d);
		background-image:     	-ms-linear-gradient(top, #e5cf55, #deb154 50%,#d5a42e 50%, #c3752d);
		background-image:      	 -o-linear-gradient(top, #e5cf55, #deb154 50%,#d5a42e 50%, #c3752d);
		background-image:         	linear-gradient(top, #e5cf55, #deb154 50%,#d5a42e 50%, #c3752d);

		border: 					1px solid #ac5e1e;
		border-radius: 				6px;
			-moz-border-radius: 	6px;
			-webkit-border-radius: 	6px;

		color: 						#a5151e;
		font-size: 					1.1em;
		margin-left: 				5px;
		padding: 					5px 30px;
		text-shadow: 				0px 1px 1px white;
	}
	#header-options .button:hover,
	#header-options .button:focus {
		text-decoration: 	none;
		background-image: 	none;
	}
	#header-options .settings {
		background-color: 			#d7dadf;

		background-image: 	-webkit-gradient(linear, left top, left bottom, from(#eaebed), to(#b7bcc0));
		background-image: 	-webkit-linear-gradient(top, #eaebed, #d7dadf 50%,#cecfd4 50%, #b7bcc0);
		background-image: 	   -moz-linear-gradient(top, #eaebed, #d7dadf 50%,#cecfd4 50%, #b7bcc0);
		background-image:     	-ms-linear-gradient(top, #eaebed, #d7dadf 50%,#cecfd4 50%, #b7bcc0);
		background-image:      	 -o-linear-gradient(top, #eaebed, #d7dadf 50%,#cecfd4 50%, #b7bcc0);
		background-image:         	linear-gradient(top, #eaebed, #d7dadf 50%,#cecfd4 50%, #b7bcc0);

		border-color: 				#9fa0a4;
		padding: 					5px 6px;
	}
	#header-options .settings img {
		vertical-align: middle;
	}

/* }}} */
/* {{{ Content */

#body-content h1 {
	font-size: 1.5em;
}
#body-content ul,
#body-content p {
	margin-bottom: 15px;
}
	#body-content ul.double {
		float: 	left;
		width: 	49%;
	}
#body-content li {
	list-style-position: 	inside;
}

#body-content section,
#body-content article {
	margin-bottom: 			30px;
}
	#body-content aside section,
	#main-content .introduction {
		border-radius: 				4px;
			-moz-border-radius: 	4px;
			-webkit-border-radius: 	4px;
		box-shadow: 				1px 1px 4px #999;
			-moz-box-shadow: 		1px 1px 4px #999;
			-webkit-box-shadow: 	1px 1px 4px #999;
		padding: 					10px 15px;
	}

	#body-content aside {
		float: 	left;
		width: 	228px;
	}
	#body-content aside .date {
		color: 	#666;
	}
		#body-content aside header {
			border-bottom: 	1px solid #ccc;
			padding-bottom: 15px;
			margin-bottom: 	20px;
		}
			#body-content aside header h1 {
				font-size: 	1.3em;
			}
			#body-content aside header a {
				float: 		right;
			}
	#body-content section {
		background-color: 		white;
		background-image: 		url(../img/aside-background.jpg);
		background-repeat: 		no-repeat;
		background-position: 	bottom;
	}

#main-content {
	float: 		left;
	width: 		732px;
}
	#main-content section {
		clear: 			left;
	}
	#main-content article {
		float: 			left;
		width: 			326px;
		margin-right: 	20px;
		padding: 		5px 5px;
	}
	#main-content .full {
		min-width: 		707px;
		margin-right: 	0;
	}
	#main-content .introduction {
		background-color: 		white;
		background-image: 		url(../img/introduction-background.jpg);
		background-repeat: 		no-repeat;
		background-position: 	bottom right;
		min-width: 				679px;
	}
		#main-content .introduction h1,
		#body-content aside h1 {
			color: 		#a5151e;
		}

/* }}} */
/* {{{ Footer */

body > footer {
	clear: 		both;
	color: 		#999;
	margin: 	105px 0 0 0;
	position:	relative;
}
	body > footer h1,
	body > footer h2,
	body > footer h3,
	body > footer h4,
	body > footer h5,
	body > footer h6,
	body > footer p {
		color:	#999;
	}
/* ... */

